Add external template

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Un curso express de VueJS",
   "scripts": {
     "server": "live-server .",
-    "bundle": "browserify scripts/main.js -o bundle.js"
+    "bundle": "browserify scripts/main.js -o bundle.js -t stringify"
   },
   "author": "Emilio J. Grande <emilio@jsjutsu.com>",
   "license": "MIT",
   "devDependencies": {
     "browserify": "^13.0.1",
-    "live-server": "^1.0.0"
+    "live-server": "^1.0.0",
+    "stringify": "^5.1.0"
   }
 }
