--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "description": "Un curso express de VueJS",
   "scripts": {
     "server": "live-server .",
-    "bundle": "browserify scripts/main.js -o bundle.js -t stringify"
+    "bundle": "browserify scripts/main.js -o bundle.js -t vueify --debug"
   },
+  "private": true,
   "author": "Emilio J. Grande <emilio@jsjutsu.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.9.1",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-runtime": "^6.9.2",
     "browserify": "^13.0.1",
     "live-server": "^1.0.0",
-    "stringify": "^5.1.0"
+    "stringify": "^5.1.0",
+    "vue-hot-reload-api": "^2.0.0",
+    "vueify": "^8.5.4"
+  },
+  "dependencies": {
+    "vue": "^1.0.24",
+    "vue-resource": "^0.7.3"
   }
 }
